force-app/main/default/objects/Account/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <formula>IF(RecordTypeId = &quot;012Hp000001vIUH&quot;, Name, PersonContact.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Formula)</label>
    <type>Text</type>
</CustomField>