force-app/main/default/objects/Account/fields/Account_Note__c.field-meta.xml
<CustomField>
    <fullName>Account_Note__c</fullName>
    <label>Account Note</label>
    <type>TextArea</type>
</CustomField>