force-app/main/default/objects/Account/fields/Account_SSN_or_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_SSN_or_Tax_ID__c</fullName>
    <label>Account SSN or Tax ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>