force-app/main/default/objects/Account/fields/Birthdate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Formula__c</fullName>
    <formula>PersonBirthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate Formula</label>
    <type>Date</type>
</CustomField>