force-app/main/default/objects/Account/fields/Deadlines_for_new_grant_leads__c.field-meta.xml
<CustomField>
    <fullName>Deadlines_for_new_grant_leads__c</fullName>
    <label>Deadlines (for new grant leads)</label>
    <type>TextArea</type>
</CustomField>