force-app/main/default/objects/Account/fields/First_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Account__c</fullName>
    <label>First Name Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>