force-app/main/default/objects/Account/fields/Frequency_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_contact__c</fullName>
    <label>Frequency of contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>Contacted before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>