force-app/main/default/objects/Account/fields/Last_Contact_with_this_Company__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_with_this_Company__c</fullName>
    <label>Last Contact with this Company</label>
    <type>Date</type>
</CustomField>