force-app/main/default/objects/Account/fields/Last_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Account__c</fullName>
    <label>Last Name Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>