force-app/main/default/objects/Account/fields/Last_Quickbooks_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Quickbooks_Sync_Date__c</fullName>
    <label>Last Quickbooks Sync Date</label>
    <type>DateTime</type>
</CustomField>