force-app/main/default/objects/Account/fields/Organization_Email__c.field-meta.xml
<CustomField>
    <fullName>Organization_Email__c</fullName>
    <label>Organization Email</label>
    <type>Email</type>
</CustomField>