force-app/main/default/objects/Account/fields/Original_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Original Contact ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>