force-app/main/default/objects/Account/fields/Primary_Rep_Trust_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Trust_2_Email__c</fullName>
    <label>Primary Rep Trust 2 Email</label>
    <type>Email</type>
</CustomField>