force-app/main/default/objects/Account/fields/Primary_Rep_Updated_Bene_Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_Bene_Sub_Account__c</fullName>
    <label>Primary Rep Updated Bene Sub-Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>