force-app/main/default/objects/Account/fields/Primary_Rep_Updated_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_Birthdate__c</fullName>
    <label>Primary Rep Updated Birthdate</label>
    <type>Date</type>
</CustomField>