force-app/main/default/objects/Account/fields/Primary_Rep_Updated_Last_4_Digits_SSN__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_Last_4_Digits_SSN__c</fullName>
    <label>Primary Rep Updated Last 4 Digits SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>