force-app/main/default/objects/Account/fields/Primary_Rep_Updated_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_Last_Name__c</fullName>
    <label>Primary Rep Updated Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>