force-app/main/default/objects/Account/fields/Quickbooks_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Display_Name__c</fullName>
    <inlineHelpText>Changing this field will change the Name in Quickbooks</inlineHelpText>
    <label>Quickbooks Display Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>