force-app/main/default/objects/Account/fields/QuickbooksInternalAccountID__c.field-meta.xml
<CustomField>
    <fullName>QuickbooksInternalAccountID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Quickbooks Internal Account ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>