force-app/main/default/objects/Account/fields/Send_Birthday_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Birthday_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Birthday Email</label>
    <type>Checkbox</type>
</CustomField>