force-app/main/default/objects/Account/listViews/All_Arcare_Board_Members.listView-meta.xml
<ListView>
    <fullName>All_Arcare_Board_Members</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_TITLE</columns>
    <columns>Is_Board_Member__pc</columns>
    <columns>Board_Member_Start_Date__pc</columns>
    <columns>Board_Member_End_Date__pc</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Board_Member__pc</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Arcare Board Members</label>
</ListView>