force-app/main/default/objects/Account/listViews/All_Beneficiaries.listView-meta.xml
<ListView>
    <fullName>All_Beneficiaries</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>PC_PHONE4</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_ADDRESS2_CITY</columns>
    <columns>PC_LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Beneficiary__pc</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Beneficiaries</label>
</ListView>