force-app/main/default/objects/Account/listViews/Client_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>Client_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Caution_Summary__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Beneficiary</value>
    </filters>
    <label>Client Person Accounts</label>
</ListView>