force-app/main/default/objects/Account/listViews/Non_Client_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>Non_Client_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Caution_Summary__pc</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Original_Contact_ID__c</columns>
    <columns>Original_System_ID__c</columns>
    <columns>Original_Profile_ID__pc</columns>
    <columns>Original_System_ID__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Individual</value>
    </filters>
    <label>Non Client Person Accounts</label>
</ListView>