force-app/main/default/objects/Account/listViews/Organization_Accounts.listView-meta.xml
<ListView>
    <fullName>Organization_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <label>Organization Accounts</label>
</ListView>